# gesture_volume_control

./: README.md  face_detect.py  gesture_painting.py  gesture_volume_control.py  hand_detect.py  pyproject.toml  requirements.txt
tutorial/: hand_detect.ipynb
